axum-macros/tests/debug_handler/fail/multiple_request_consumers.stderr
error: Can't have two extractors that consume the request body. `Json<_>` and `String` both do that.
 --> tests/debug_handler/fail/multiple_request_consumers.rs:9:14
  |
9 | async fn one(_: Json<()>, _: String, _: Uri) {}
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Can't have more than one extractor that consume the request body. `Json<_>`, `Bytes`, and `String` all do that.
  --> tests/debug_handler/fail/multiple_request_consumers.rs:12:14
   |
12 | async fn two(_: Json<()>, _: Method, _: Bytes, _: Uri, _: String) {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
